css z-index bugs fixed

--- a/src/app/main/contacts/single-contact/single-contact.component.scss
+++ b/src/app/main/contacts/single-contact/single-contact.component.scss
@@ -11,7 +11,7 @@ $hover-grey: #D1D1D1;
     border-radius: 10px;
     transition: transform 0.5s ease-in-out;
     transform: translateX(150%);
-    z-index: 10;
+    z-index: 50;
     overflow: hidden;
 
     .folder-info{
@@ -167,7 +167,6 @@ button:disabled{
     .add-contact{
         flex-direction: column;
         height: auto;
-        z-index: 21;
         top: 15%;
         .folder-info{
             width: 100%;
